# essential-python

./: .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/essential_python/: basic.py  config.py  fastapi.py  postgresql.py  test_config.py
